2005-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_EMACS): Check whether XEmacs works with the
	shy group regexp and runs call-process-region correctly.

	* w3m-perldoc.el (w3m-about-perldoc): Don't relieve buggy XEmacs
	21.5 for call-process-region.

	* w3m-xmas.el (w3m-fix-gif): Ditto.
	(w3m-initialize-graphic-icons): Ditto.

	* w3m.el (w3m-decode-encoded-contents): Ditto.
	(w3m-x-moe-decode-buffer): Ditto.
	(w3m-rendering-half-dump): Ditto.

	* w3mhack.el: Advise byte-optimize-form-code-walker to avoid the
	``...called for effect'' warnings for Emacs 21.4 as well as 21.3;
	don't relieve buggy XEmacs 21.5 for call-process-region.

2005-06-12  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-muchy.el: Removed.

2005-06-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make emacs-w3m not support the XEmacs versions older than 21.4.17
	or 21.5-b19.

	* aclocal.m4 (AC_PATH_EMACS): Check whether XEmacs runs the timer
	functions correctly.

	* w3m-util.el (w3m-cancel-refresh-timer): Use delete-itimer
	instead of cancel-timer under XEmacs.

	* w3m-xmas.el (call-process-region): Don't advise it.
	(w3m-run-at-time): Remove.

	* w3m.el (w3m-refresh-at-time): Use run-at-time instead of
	w3m-run-at-time.

	* w3mhack.el (w3mhack-byte-optimize-letX): Doc fix.

2005-06-09  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-group-alist): Add
	"blog.sakamoto" entry.

	* shimbun/(sb-x51.el, sb-wikimedia.el, sb-w3m-dev.el, sb-tigris.el,
	sb-mailman.el, sb-excite.el, sb-cnn-jp.el, sb-arch-bluegate.el): Mail
	address renew.

	* w3m.el: Ditto.

2005-06-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el (nnshimbun-request-group): Avoid multiple
	retrieving of headers.
	(gnus-group-make-shimbun-group): Use non-prefixed name when
	calling `gnus-group-read-ephemeral-group'.
	(gnus-group-make-shimbun-groups): Call `gnus-group-entry' instead
	of calling `gnus-gethash' which requires Gnus internal variable